Last item in in horizontal design bar Drop down now opens right: 0 to avoid overflow bug

--- a/core/assets/layers-customizer.css
+++ b/core/assets/layers-customizer.css
@@ -1075,7 +1075,7 @@ div[id*='layers-widget'] .widget-control-actions .alignright{
 	.layers-sync-setting-holder.layers-use-widget-value .layers-global-setting{
 		display: none;
 	}
-	
+
 	/*------------------------------------*/
 	/*- FORM COLLECTIONS (E.G. BUTTONS) --*/
 	.layers-form-collection {
@@ -1138,9 +1138,9 @@ div[id*='layers-widget'] .widget-control-actions .alignright{
 
 		/*---------------------------------------------------------*/
 		/*- FORM COLLECTIONS - LINK-GROUP SPECIFIC ELEMENTS -------*/
-			
+
 			/*------------------------*/
-			/*- LINK FIELDS ----------*/	
+			/*- LINK FIELDS ----------*/
 			.layers-link-field{
 				position: relative;
 			}
@@ -1658,6 +1658,10 @@ div[id*='layers-widget'] .widget-control-actions .alignright{
 		top: 44px !important;
 		right: auto;
 		transition: all 0.1s ease-in-out 0.1s;
+	}
+	.layers-visuals-horizontal .layers-visuals-item.layers-last .layers-pop-menu-wrapper{
+		left: auto;
+		right: 0;
 	}
 	.layers-visuals-horizontal .layers-pop-menu-wrapper.layers-small{
 		width: auto;
